Lots of updates for the JSON Schema publish

--- a/about.html
+++ b/about.html
@@ -8,9 +8,11 @@
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/fonts.css">
         <link rel="stylesheet" href="/css/asbjornenge.css">
+        <!--
         <link rel="stylesheet" href="/css/font-awesome.min.css">
-        <link href='http://fonts.googleapis.com/css?family=Elsie' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Bilbo+Swash+Caps' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="/css/highlight/googlecode.css">
+        <script src="/js/lib/highlight.pack.js"></script>
+        -->
         <script src="/js/lib/ga.js"></script>
         <script src="/js/lib/jquery-1.9.0.min.js"></script>
         <script src="/js/lib/tap.js"></script>
@@ -39,7 +41,13 @@
         <div id="content">
             <h1>About</h1>
 
-<p>I&#39;m an amateur coffee fanatic. My preferred brewing method is pourover by <a href="http://www.chemexcoffeemaker.com">Chemex</a>. I prefer light and floral african beans, washed. I get my coffee from a number of places including <a href="http://www.coffeeberry.no">Coffeeberry</a>, <a href="http://timwendelboe.no">Tim Wendelboe</a>, <a href="http://www.kaffa.no">Kaffa</a> and <a href="http://shop.squaremilecoffee.com">Square Mile Coffee</a>.</p>
+<p>My name is Asbjørn Enge. I&#39;m a software enthusiast living in <a href="http://maps.google.no/maps/place?ftid=0x463a36437b9b9cf5:0xe6ef5562b66909e0&amp;q=sandnes&amp;hl=no&amp;ved=0CAwQ-gswAA&amp;sa=X&amp;ei=9ooXUbWwBsff8QOKrIDAAg">Sandnes, Norway</a>.</p>
+
+<p>I&#39;m really passionate about <a href="http://en.wikipedia.org/wiki/Free_software">free software</a> and the <a href="http://en.wikipedia.org/wiki/World_Wide_Web">web</a>. I do engineering &amp; design of both client and server applications. A great solution includes a limited feature set, a scaleable RESTful API and an opinionated web client. I care about syntax and readability. I don&#39;t care for huge frameworks and confusing abstractions. My preferred languages are <a href="http://en.wikipedia.org/wiki/Python_(programming_language)">python</a> &amp; <a href="http://en.wikipedia.org/wiki/JavaScript">javascript</a>.</p>
+
+<p>I sometimes dabble in the water of words and melody. I write and perform songs. I play the guitar, harmonica and some percussion. You can find some of my music on <a href="https://itunes.apple.com/us/artist/asbjorn-enge/id528981222">itunes</a>.</p>
+
+<p>I&#39;m also an amateur coffee fanatic. My preferred brewing method is pourover by <a href="http://www.chemexcoffeemaker.com">Chemex</a>. I prefer washed,  light and floral african beans. I get my coffee from a number of places including <a href="http://www.coffeeberry.no">Coffeeberry</a>, <a href="http://timwendelboe.no">Tim Wendelboe</a>, <a href="http://www.kaffa.no">Kaffa</a> and <a href="http://shop.squaremilecoffee.com">Square Mile Coffee</a>.</p>
 
             <div class="push"></div>
         </div>
