--- a/software.html
+++ b/software.html
@@ -8,9 +8,11 @@
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/fonts.css">
         <link rel="stylesheet" href="/css/asbjornenge.css">
+        <!--
         <link rel="stylesheet" href="/css/font-awesome.min.css">
-        <link href='http://fonts.googleapis.com/css?family=Elsie' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Bilbo+Swash+Caps' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="/css/highlight/googlecode.css">
+        <script src="/js/lib/highlight.pack.js"></script>
+        -->
         <script src="/js/lib/ga.js"></script>
         <script src="/js/lib/jquery-1.9.0.min.js"></script>
         <script src="/js/lib/tap.js"></script>
@@ -40,10 +42,10 @@
             <h1><a href="https://github.com/asbjornenge/centipede">Centipede</a></h1>
 
 <blockquote>
-<p>A tiny python RESTful API framework</p>
+<p>A tiny RESTful API microframework</p>
 </blockquote>
 
-<p>Centipede aims to facilitate quick creation of RESTful API&#39;s.</p>
+<p>Centipede is a <a href="http://en.wikipedia.org/wiki/Web_Server_Gateway_Interface">WSGI</a> microframework. It aims to facilitate quick creation of RESTful API&#39;s using python. By design centipede tries to express the http protocol, rather than hiding it behind confusing abstractions. Centipede digs decorators.</p>
 
 <!--
 # [TapJS](https://github.com/asbjornenge/tapjs)
