Updated JSON-Schema article with the new json schema v4 drafts

--- a/wwc/json_schema.html
+++ b/wwc/json_schema.html
@@ -72,9 +72,17 @@ If you care about creating a great experience, you need to take error handling s
 
 <p>You can validate your data using that schema. If it is valid, you can be sure this data is an object with a title property of type string.</p>
 
-<h3>Specification</h3>
+<h3><a id="specification"></a> Specification</h3>
 
 <p>The latest <a href="http://www.ieft.org">IETF</a> draft is currently <a href="http://tools.ietf.org/html/draft-zyp-json-schema-03">v3</a>, but they have a v4 <em>being prepared for submission in early 2013</em>. <strong>This post will focus on v4</strong>.</p>
+
+<p><strong>UPDATE</strong><br>
+The new drafts are up!</p>
+
+<p><strong>Core:</strong><br>
+<a href="http://tools.ietf.org/html/draft-zyp-json-schema-04">http://tools.ietf.org/html/draft-zyp-json-schema-04</a><br>
+<strong>Validation:</strong><br>
+<a href="http://tools.ietf.org/html/draft-fge-json-schema-validation-00">http://tools.ietf.org/html/draft-fge-json-schema-validation-00</a></p>
 
 <h3>Software</h3>
 
