--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div class="date">08.03.2013</div>
 
 <blockquote>
-<p>Todo workflow for inbox zerioists.</p>
+<p>Todo workflow for inbox zeroists.</p>
 </blockquote>
 
 <p>I&#39;m an <a href="http://inboxzero.com/">inbox zeroist</a>; my inbox is my todo list.</p>
