Added social animation. Updated base

--- a/wwc/json_schema.html
+++ b/wwc/json_schema.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/fonts.css">
         <link rel="stylesheet" href="/css/asbjornenge.css">
-        <!--
         <link rel="stylesheet" href="/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/css/animate.min.css">
+        <!--
         <link rel="stylesheet" href="/css/highlight/googlecode.css">
         <script src="/js/lib/highlight.pack.js"></script>
         -->
@@ -38,6 +39,10 @@
             <span class="nav_selector">&nbsp;</span>
         </div>
         <div style="clear:both"></div>
+        <div id="social">
+            <div class="github"><a href="http://github.com/asbjornenge"><i class="icon-github"></i></a></div>
+            <div class="twitter"><a href="http://twitter.com/asbjornenge"><i class="icon-twitter"></i></a></div>
+        </div>
         <div id="content">
             <h1><a href="/wwc/json_schema.html">JSON Schema Validation</a></h1>
 
