Added music link to social icons

--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
         <div id="social">
             <div class="github"><a href="http://github.com/asbjornenge"><i class="icon-github"></i></a></div>
             <div class="twitter"><a href="http://twitter.com/asbjornenge"><i class="icon-twitter"></i></a></div>
+            <div class="itunes"><a href="https://itunes.apple.com/us/artist/asbjorn-enge/id528981222"><i class="icon-music"></i></a></div>
         </div>
         <div id="content">
             <h1>About</h1>
