--- a/wwc/out_of_sorts.html
+++ b/wwc/out_of_sorts.html
@@ -53,7 +53,7 @@
 
 <h4>Disclaimer</h4>
 
-<p>Before I even start this I should probably state that this adventures leads into unfamiliar terrain and over half my findings are probably half-witted nonsense. There. I should probably start all my blogposts like that.</p>
+<p>Before I even start this I should probably state that this adventure leads into unfamiliar terrain, and over half my findings are probably half-witted nonsense. There. I should probably start all my blogposts like that.</p>
 
 <h2>Introduction</h2>
 
@@ -63,14 +63,14 @@
 
 <h2>The design bullet</h2>
 
-<p>The current problem I was facing seemed simple enough; allow a line of text to inclue a bullet. Easy as pie.</p>
+<p>The current problem I was facing seemed simple enough; allow a line of text to include a bullet. Easy as pie.</p>
 
 <pre><code>&lt;span style=&quot;display:list-item&quot;&gt;Some Text&lt;/span&gt;
 </code></pre>
 
-<p>Turned out it wasn&#39;t quite that easy. These bullets were part of our clients design manual, but they were not the same as the bullet glyph of the font. Modifying the font was also out of the question because of licensing.</p>
+<p>Turned out it wasn&#39;t quite so easy. These bullets were part of our clients design manual, but they were not the same as the bullet glyph of the font. Modifying the font was also out of the question because of licensing.</p>
 
-<p>But, there was a clear definition; the bullet was a square of <em>height</em> and <em>width</em> <em>x</em> relative the <em>font-size</em>, <strong>vertically aligned</strong> (centered) with the font&#39;s <a href="http://en.wikipedia.org/wiki/Baseline_(typography)"><strong>x-height</strong></a>.</p>
+<p>But, there was a clear definition; the bullet was a square of <em>height</em> and <em>width</em> <em>x</em> relative the <em>font-size</em>, <strong>vertically aligned</strong> (centered) with the fonts <a href="http://en.wikipedia.org/wiki/Baseline_(typography)"><strong>x-height</strong></a>.</p>
 
 <p>Calculating the x-height of a target element is easy enough using css&#39;s <a href="http://www.w3.org/Style/Examples/007/units#units"><strong>ex</strong></a> unit.</p>
 
@@ -87,15 +87,15 @@
 
 <h4>The good news</h4>
 
-<p>It&#39;s possible to calculate! AND, there is a great <a href="https://github.com/Pomax/Font.js">library</a> that will do most of the heavy lifting for you! We&#39;ll get to that :-)</p>
+<p>It&#39;s possible to calculate! AND, there is a great <a href="https://github.com/Pomax/Font.js">library</a> that will do most of the heavy lifting for you! We&#39;ll get to that.</p>
 
 <h2>Calculation</h2>
 
-<p>There are two approaches to calculate a font&#39;s vertical metrics as far as I can tell.</p>
+<p>To calculate a fonts vertical metrics, there are two approaches as far as I can tell.</p>
 
 <p><strong>1. Measuring dom elements</strong></p>
 
-<p>The first <a href="http://www.brunildo.org/test/xheight.pl">approach</a> is using a bunch of dom elements with spesific font-related metrics (1em, 1ex, etc.) and measure these in px (offsetWidth) at different levels and at different font-size&#39;s.</p>
+<p>The first <a href="http://www.brunildo.org/test/xheight.pl">approach</a> is to use a bunch of dom elements with specific font-related metrics (1em, 1ex, etc.) and measure these in px (offsetWidth) at different levels and at different font-size&#39;s.</p>
 
 <p>The approach seems to work quite well for the calculation part. Sturdy across browsers and fonts. For the actual positioning there were other icebergs floating around.</p>
 
@@ -119,15 +119,14 @@
 
 <p>The one that hit me hard in the face is the fact that different browsers, and even the same browsers on different operating systems, deal very differently with how they render fonts. Even different versions of the same operating system will sometimes render fonts very differently.</p>
 
-<blockquote>
-<p>At typical body-text sizes, the computer has to draw each letter using only 15 or so pixels in each direction. It’s not possible to draw each letter exactly as the typographer intended, and keep all the lines crisp and smooth, with that few pixels. Windows, OSX, and Linux all resolve this dilemma differently: to oversimplify a bit, OSX tries harder to preserve the font shapes, Windows tries harder to make the lines sharp, and Linux tries to do both at once and winds up achieving neither. ~ Zachary Weinberg @ http://www.owlfolio.org</p>
-</blockquote>
+<p><em>At typical body-text sizes, the computer has to draw each letter using only 15 or so pixels in each direction. It’s not possible to draw each letter exactly as the typographer intended, and keep all the lines crisp and smooth, with that few pixels. Windows, OSX, and Linux all resolve this dilemma differently: to oversimplify a bit, OSX tries harder to preserve the font shapes, Windows tries harder to make the lines sharp, and Linux tries to do both at once and winds up achieving neither.<br>
+~ Zachary Weinberg</em></p>
 
-<p>Sometimes the font won&#39;t even render inside it&#39;s bounding box! (!!!!) For my current problem, that makes any font metric calculation futile :-( Turns out, this library I&#39;ve been mumbling about had a solution for even this.</p>
+<p>Sometimes the font won&#39;t even render inside it&#39;s bounding box! (!!!!) For my current problem, that makes any font metric calculation futile. Turns out, this library I&#39;ve been mumbling about had a solution for even this.</p>
 
 <h3>Timing</h3>
 
-<p>Another issue with embedded font&#39;s is knowing when the font is loaded. If you try to measure prematurely you will end up measuring the fallback font, and thats no good. </p>
+<p>Another issue with embedded fonts is knowing when the font is loaded. If you try to measure prematurely you will end up measuring the fallback font, and thats no good. </p>
 
 <p>The only viable solution I have come across is using a &quot;dummy&quot; fallback font that will encode a character as a zero-width unit. Putting that in a paragraph and polling for a real width. It&#39;s not a great solution but it works.</p>
 
@@ -153,7 +152,7 @@ font.measureText(string, size) -&gt; {}
 <p><em>Font.js actually draws text offscreen, does a scanline pass to find out what the &quot;real&quot; ascent and descent is, and then sets height to ascent + 1 + descent (&quot;1&quot; for the baseline itself). This generally works quite well, but will lead to incorrect heights for fonts that don&#39;t implement the Latin blocks =)<br>
 ~ Michiel Kamermans</em></p>
 
-<p>One important thing to note is that the font&#39;s are loaded using <strong>XMLHttpRequest</strong>&#39;s. This is important since it is the only way to get the font data so it can be inspected and manipulated. But it does mean you have to deal with hosting your own fonts or setting up <a href="http://en.wikipedia.org/wiki/Cross-origin_resource_sharing">CORS</a> to avoid <em>Access-Control-Allow-Origin</em> issues. </p>
+<p>One important thing to note is that the fonts are loaded using <strong>XMLHttpRequest</strong>&#39;s. This is important since it is the only way to get the font data so it can be inspected and manipulated. But it does mean you have to deal with hosting your own fonts or setting up <a href="http://en.wikipedia.org/wiki/Cross-origin_resource_sharing">CORS</a> to avoid <em>Access-Control-Allow-Origin</em> issues. </p>
 
 <p>Font.js is a great library for solving most of the current headaches related to fonts.</p>
 
