Added untested rss support to gymb and added publish date to out_of_sorts

--- a/wwc/out_of_sorts.html
+++ b/wwc/out_of_sorts.html
@@ -45,7 +45,9 @@
             <div class="itunes"><a href="https://itunes.apple.com/us/artist/asbjorn-enge/id528981222"><i class="icon-music"></i></a></div>
         </div>
         <div id="content">
-            <h1>Out of sorts</h1>
+            <h1><a href="/wwc/out_of_sorts.html">Out of sorts</a></h1>
+
+<div class="date">30.03.2013</div>
 
 <blockquote>
 <p>My first real fight with fonts.</p>
