Added rss feed link

--- a/software.html
+++ b/software.html
@@ -44,6 +44,9 @@
             <div class="twitter"><a href="http://twitter.com/asbjornenge"><i class="icon-twitter"></i></a></div>
             <div class="itunes"><a href="https://itunes.apple.com/us/artist/asbjorn-enge/id528981222"><i class="icon-music"></i></a></div>
         </div>
+        <div id="feed">
+            <div class="rss"><a href="http://www.asbjornenge.com/wwc/rss.xml"><i class="icon-rss"></i></a></div>
+        </div>
         <div id="content">
             <h1><a href="https://github.com/asbjornenge/centipede">Centipede</a></h1>
 
