--- a/software.html
+++ b/software.html
@@ -48,7 +48,7 @@
             <div class="rss"><a href="http://www.asbjornenge.com/wwc/rss.xml"><i class="icon-rss"></i></a></div>
         </div>
         <div id="content">
-            <h1><a href="https://github.com/asbjornenge/centipede">Centipede</a></h1>
+            <h1><a href="http://www.asbjornenge.com/centipede">Centipede</a></h1>
 
 <blockquote>
 <p>A tiny RESTful API microframework</p>
