Added stubble to software

--- a/software.html
+++ b/software.html
@@ -56,11 +56,13 @@
 
 <p>Centipede is a <a href="http://en.wikipedia.org/wiki/Web_Server_Gateway_Interface">WSGI</a> microframework. It aims to facilitate quick creation of RESTful API&#39;s using python. By design centipede tries to express the http protocol, rather than hiding it behind confusing abstractions. Centipede digs decorators.</p>
 
-<!--
-# [TapJS](https://github.com/asbjornenge/tapjs)
+<h1><a href="http://www.asbjornenge.com">Stubble</a></h1>
 
-> Touch events for touch devices
--->
+<blockquote>
+<p>Tiny hairy templates</p>
+</blockquote>
+
+<p>Stubble is my approach to javascript templates. It&#39;s a really tiny library both in size (552 B gzipped) and functionality. But it has a nice little declarative plugin system so you can grow it much any way you want.</p>
 
             <div class="push"></div>
         </div>
