Fixed stubble url

--- a/software.html
+++ b/software.html
@@ -56,7 +56,7 @@
 
 <p>Centipede is a <a href="http://en.wikipedia.org/wiki/Web_Server_Gateway_Interface">WSGI</a> microframework. It aims to facilitate quick creation of RESTful API&#39;s using python. By design centipede tries to express the http protocol, rather than hiding it behind confusing abstractions. Centipede digs decorators.</p>
 
-<h1><a href="http://www.asbjornenge.com">Stubble</a></h1>
+<h1><a href="http://www.asbjornenge.com/stubble">Stubble</a></h1>
 
 <blockquote>
 <p>Tiny hairy templates</p>
