--- a/software.html
+++ b/software.html
@@ -62,7 +62,7 @@
 <p>Tiny hairy templates</p>
 </blockquote>
 
-<p>Stubble is my approach to javascript templates. It&#39;s a really tiny library both in size (552 B gzipped) and functionality. But it has a nice little declarative plugin system so you can grow it much any way you want.</p>
+<p>Stubble is my approach to javascript templates. It&#39;s a really tiny library both in size (552 B gzipped) and functionality. But it has a nice little declarative plugin system so you can grow it most any way you want.</p>
 
             <div class="push"></div>
         </div>
