--- a/base.html
+++ b/base.html
@@ -22,7 +22,7 @@
     <body>
         <div id="head">
             <a link="/" class="nav_item">
-                <%block name="logo"><img id="logo" src="/img/avatar_asbjornenge.jpeg"/></%block>
+                <%block name="logo"><img id="logo" src="https://www.gravatar.com/avatar/198a385bacf129e4b07f2b9e748787df?s=80"/></%block>
             </a>
             <div id="label"><%block name="label">Web, Words & Coffee</%block></div>
             <ul id="menu">
