--- a/software.html
+++ b/software.html
@@ -22,7 +22,7 @@
     <body>
         <div id="head">
             <a link="/" class="nav_item">
-                <img id="logo" src="/img/avatar_asbjornenge.jpeg"/>
+                <img id="logo" src="https://www.gravatar.com/avatar/198a385bacf129e4b07f2b9e748787df?s=80"/>
             </a>
             <div id="label">freedom() {}</div>
             <ul id="menu">
