--- a/wwc/out_of_sorts.html
+++ b/wwc/out_of_sorts.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="/css/asbjornenge.css">
         <link rel="stylesheet" href="/css/font-awesome.min.css">
         <link rel="stylesheet" href="/css/animate.min.css">
+        <link rel="shortcut icon" href="https://www.gravatar.com/avatar/198a385bacf129e4b07f2b9e748787df?s=128">
         <!--
         <link rel="stylesheet" href="/css/highlight/googlecode.css">
         <script src="/js/lib/highlight.pack.js"></script>
