--- a/wwc/vagrant_skydocking.html
+++ b/wwc/vagrant_skydocking.html
@@ -51,7 +51,7 @@
             <div class="rss"><a href="http://www.asbjornenge.com/wwc/rss.xml"><i class="icon-rss"></i></a></div>
         </div>
         <div id="content">
-            <h1>Skydocking your host</h1>
+            <h1>Vagrant Skydocking</h1>
 
 <h2>A bridge over vagrant water</h2>
 
@@ -87,7 +87,7 @@ $&gt; sudo ip link set eth1 master docker0
 
 <p>You now have a <strong>bridge</strong> from your host to your docker network!!</p>
 
-<pre><code>$&gt; IP=`sudo docker inspect -format=&#39;{{.NetworkSettings.IPAddress}}&#39; 5aa2a5199204`
+<pre><code>$&gt; IP=`docker inspect -format=&#39;{{.NetworkSettings.IPAddress}}&#39; 5aa2a5199204`
 $&gt; ping $IP
 PING 10.2.0.7 (10.2.0.7) 56(84) bytes of data.
 64 bytes from 10.2.0.7: icmp_req=1 ttl=64 time=0.232 ms
@@ -106,9 +106,9 @@ rtt min/avg/max/mdev = 0.103/0.167/0.232/0.065 ms
 
 <p>(Docker provides a -link parameter for linking containers. But this quickly falls short in complex scenarios.)</p>
 
-<p>I was just about to dig into service discrovery solutions like <a href="https://github.com/coreos/etcd">etcd</a> or similar, when <a href="http://crosbymichael.com/">Michael Crosby</a> posted his <a href="https://github.com/crosbymichael/skydock">skydock</a> (<a href="https://www.youtube.com/watch?v=Nw42q1ofrV0">video</a>). It&#39;s brilliant! It basically let&#39;s you discover your service via DNS and a few naming conventions. I won&#39;t go into setting up skydock, just check out the awesome <a href="https://github.com/crosbymichael/skydock">tutorial</a> by Michael.</p>
+<p>I was just about to dig into service discrovery solutions like <a href="https://github.com/coreos/etcd">etcd</a> or similar, when <a href="http://crosbymichael.com/">Michael Crosby</a> posted his <a href="https://github.com/crosbymichael/skydock">skydock</a> (<a href="https://www.youtube.com/watch?v=Nw42q1ofrV0">video</a>). It&#39;s brilliant! It let&#39;s you discover your service via <strong>DNS</strong>. I won&#39;t go into setting up skydock, just check out the awesome <a href="https://github.com/crosbymichael/skydock">tutorial</a> by Michael.</p>
 
-<p>So, with skydock my containers can discover eachother via DNS. Awesome! But, with my network bridge set up, so can my host!! No? That would be really nice for development...</p>
+<p>So, with skydock my containers can discover eachother via DNS names like <em>myservice.env.domain.com</em>. Awesome! But, with my network bridge set up, so can my host!! No? That would be really nice for development...</p>
 
 <pre><code>$&gt; curl elasticsearch.dev.domain.com:9200
 curl: (6) Could not resolve host: elasticsearch.dev.domain.com
@@ -123,7 +123,7 @@ $&gt; dig elasticsearch.dev.domain.com
 elasticsearch.dev.domain.com.   20  IN  A   10.2.0.7
 </code></pre>
 
-<p>✌(-‿-)✌ ... Hoplah! Now, hopefull that will be it for you and you&#39;re all set to curl containers from the comforts of your host terminal! I however, had one more issue to solve...</p>
+<p>✌(-‿-)✌ ... Hoplah! Now, hopefully that will be it for you and you&#39;re all set to curl containers from the comforts of your host terminal! I however, had one more issue to solve...</p>
 
 <pre><code>$&gt; curl elasticsearch.dev.domain.com:9200
 curl: (6) Could not resolve host: elasticsearch.dev.domain.com # w00000000t???
@@ -131,7 +131,7 @@ curl: (6) Could not resolve host: elasticsearch.dev.domain.com # w00000000t???
 
 <h3>OSX weirdness</h3>
 
-<p>Apparently OSX is rather weird in how it handles DNS. <strong>dig</strong>, <strong>host</strong>, etc. can resolve the host just fine, but other tools like <strong>curl</strong> and even <strong>ping</strong> does not obey resolv.conf. I eventually stumbled across the issue and found <a href="https://github.com/michthom/AlwaysAppendSearchDomains">this</a> script that apparently solves it for most people. It didn&#39;t help. I&#39;m on Maverics btw. Eventually I added the DNS server via OSX <a href="http://support.apple.com/kb/PH14159">network preferences</a> which did the trick.</p>
+<p>Apparently OSX is rather weird in how it handles DNS. <strong>dig</strong>, <strong>host</strong>, etc. can resolve the host just fine, but other tools like <strong>curl</strong> and even <strong>ping</strong> does not obey resolv.conf. I eventually stumbled across the issue and found <a href="https://github.com/michthom/AlwaysAppendSearchDomains">this</a> script that apparently solves it for most people. It didn&#39;t help. Eventually I added the DNS server via OSX <a href="http://support.apple.com/kb/PH14159">network preferences</a>, and that did the trick.</p>
 
 <pre><code>$&gt; curl elasticsearch.dev.domain.com:9200
 {
