Updates to vagrant skydocking

--- a/wwc/vagrant_skydocking.html
+++ b/wwc/vagrant_skydocking.html
@@ -51,7 +51,7 @@
             <div class="rss"><a href="http://www.asbjornenge.com/wwc/rss.xml"><i class="icon-rss"></i></a></div>
         </div>
         <div id="content">
-            <h1>Vagrant Skydocking</h1>
+            <h1>Vagrant skydocking</h1>
 
 <h2>A bridge over vagrant water</h2>
 
