--- a/wwc/vagrant_skydocking.html
+++ b/wwc/vagrant_skydocking.html
@@ -53,6 +53,8 @@
         <div id="content">
             <h1>Vagrant skydocking</h1>
 
+<p><div class="date">29.01.2014</div></p>
+
 <h2>A bridge over vagrant water</h2>
 
 <p>I&#39;ve been working quite a bit with <a href="http://docker.io">docker</a> lately. If you haven&#39;t yet checked it out; it&#39;s about time. Docker is already popping paradigms.</p>
