Added link to vagrant skydocking

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		
 			
     <div id="342e195d">
-    	<h1>Vagrant skydocking</h1>
+    	<h1><a href="/wwc/vagrant_skydocking.html">Vagrant skydocking</a></h1>
 
 <p><div class="date">29.01.2014</div></p>
 
