Fixed link link :-P

--- a/wwc/vagrant_skydocking_link.html
+++ b/wwc/vagrant_skydocking_link.html
@@ -51,7 +51,7 @@
             <div class="rss"><a href="http://www.asbjornenge.com/wwc/rss.xml"><i class="icon-rss"></i></a></div>
         </div>
         <div id="content">
-            <h1><a href="/wwc/vagrant_skydocking.html">Vagrant skydocking</a></h1>
+            <h1><a href="/wwc/vagrant_skydocking_link.html">Vagrant skydocking</a></h1>
 
 <p><div class="date">29.01.2014</div></p>
 
