Update on one line

--- a/wwc/vagrant_skydocking.html
+++ b/wwc/vagrant_skydocking.html
@@ -55,8 +55,7 @@
 
 <div class="date">29.01.2014</div>
 
-<p><strong>UPDATED 30.01.2014</strong><br>
-Using <strong>route</strong> instead of <strong>linking</strong> interfaces. Original article <a href="/wwc/vagrant_skydocking_link.html">here</a>.</p>
+<p><strong>UPDATE 30.01.2014</strong> - Using <strong>route</strong> instead of <strong>linking</strong> interfaces. Original article <a href="/wwc/vagrant_skydocking_link.html">here</a>.</p>
 
 <h2>A bridge over vagrant water</h2>
 
